<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="end|center"
    android:fitsSystemWindows="true"
    android:paddingStart="@dimen/bus_info_padding_start"
    android:paddingTop="30dp">

    <LinearLayout
        android:id="@+id/ll_station"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bus_line_toolbar"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/bus_line_tv_start"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="党校"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:src="@drawable/ic_trending_flat_black_24dp"/>

        <TextView
            android:id="@+id/bus_line_tv_end"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="南三环"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout

        android:id="@+id/ll_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_station"
        android:layout_marginTop="6dp">

        <TextView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:background="@drawable/first_station"
            android:gravity="center"
            android:text="@string/bus_first_station"/>

        <TextView
            android:id="@+id/bus_line_tv_first"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:text="@string/bus_first_car"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:background="@drawable/last_station"
            android:gravity="center"
            android:text="@string/bus_last_station"/>

        <TextView
            android:id="@+id/bus_line_tv_last"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:text="@string/bus_last_car"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="3dp"

        android:id="@+id/ll_ticket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_time"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="3dp"
            android:paddingTop="3dp"
            android:text="@string/bus_ticket_value"
            android:textColor="@color/white"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/bus_line_tv_ticket_value"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="3dp"
            android:text="@string/bus_ticket"
            android:textColor="@color/white"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/bus_line_tv_can_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:gravity="center"
            android:text="@string/bus_can_take_card"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:visibility="invisible"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="3dp"

        android:id="@+id/ll_bus_sum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_ticket">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/bus_sum"
            android:textColor="@color/white"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/bus_line_bus_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_bus_sum">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/bus_space"
            android:textColor="@color/white"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/bus_line_bus_space"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="15sp"/>
    </LinearLayout>

</RelativeLayout>